# oz_django

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
djangoProject/: settings.py
tabom/: models.py  service.py
tabom/migrations/: 0002_like_unique_user_article.py
tabom/tests/: test_like_service.py
