[tool.poetry]
name = "djangoproject"
version = "0.1.0"
description = ""
authors = ["dayeonkimm <ekdyd516@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]  # 배포용
python = "^3.12"
django = "^5.0.6"


[tool.poetry.group.dev.dependencies] # 개발용
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.10.0"
django-stubs = "^5.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
python_version = 3.12
strict = true

[tool.django-stubs]
django_settings_module = "djangoProject.settings"


[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "manage"
ignore_errors = true



# poetry run black . && poetry run isort . && poetry run mypy .
# & 하나면 병렬, ## 두개면 직렬(앞에꺼 성공하면 뒤에꺼)